added full comments, added API cacheability, fixed few file naming mistakes, added readme file, added hateoas links to like event response object.
